/*
 * Copyright (C) 2024 by Fonoster Inc (https://fonoster.com)
 * http://github.com/fonoster/routr
 *
 * This file is part of Routr
 *
 * Licensed under the MIT License (the "License")
 * you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 *    https://opensource.org/licenses/MIT
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package fonoster.domains.v1beta2;

import "google/protobuf/duration.proto";

// The Domains service definition
service Domains {
  // Create a new Domain
  rpc CreateDomain (CreateDomainRequest) returns (CreateDomainResponse) {}
}

// The message for the Domain resource
message Domain {
  // The unique identifier of the Domain
  string id = 2;
  // The name of the Domain
  string name = 3;
  // The URI of the Domain
  string domain_uri = 4;
  // The date of creation of the Domain
  int32 created_at = 5;
  // The date of the last update
  int32 updated_at = 6;
}

// The request message for Domains.Create
message CreateDomainRequest {
  // The name of the Domain
  string name = 1;
  // The domain_uri of the Domain
  string domain_uri = 2;
}

// The response message for Domains.Create
message CreateDomainResponse {
  // The id of the new Domain
  string id = 1;
}